adding link to map in documentation post

--- a/_posts/2017-10-17-midterm.md
+++ b/_posts/2017-10-17-midterm.md
@@ -10,7 +10,7 @@ For my midterm, I wanted to create a project that mapped something around the Be
 
 I was really inspired by the *Mapping's Intelligent Agents* reading [found here](https://placesjournal.org/article/mappings-intelligent-agents/m). I was interested in its ideas about people and animals as agents of mapping and data collection, and of having differing perceptions. 
 
-I decided to [attempt to map moments in which Bennington students have come across skunks] (). There has been a bit of a hubbub around skunk spottings this term (it didn't seem like as big of an occurrence last year, although that may have just been me!) I've seen two so far, and talked to lots of people who have seen a skunk. I wanted to see what we could learn about the skunk(s?) from just knowing when and where people have seen them. It also, interestingly, shows us the places that students are at night to some extent. 
+I decided to [attempt to map moments in which Bennington students have come across skunks](https://liliesp.github.io/skunkmap.html). There has been a bit of a hubbub around skunk spottings this term (it didn't seem like as big of an occurrence last year, although that may have just been me!) I've seen two so far, and talked to lots of people who have seen a skunk. I wanted to see what we could learn about the skunk(s?) from just knowing when and where people have seen them. It also, interestingly, shows us the places that students are at night to some extent. 
 
 Originally, these were the features I wanted my map to have:
 
