fixing final post

--- a/_posts/2017-12-12-final.md
+++ b/_posts/2017-12-12-final.md
@@ -1,13 +1,10 @@
 ---
 layout: post
 title: "Final"
-description: "Body Horror and Maps"
+description: "Body Horror, The Grotesque, and Maps"
 tags: [impossiblemaps]
 date: 2017-12-12
----
-####Impossible Maps Final Documentation Post
-
-###Body Horror, The Grotesque, And Mapping 
+--- 
 
 <figure>
 	<img src="/images/badrussia.png">
